<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_user"
            android:title="@string/nav_my_profile"/>

        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/baseline_all_inbox_24"
            android:title="@string/nav_inbox"
            />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/baseline_notes_24"
            android:title="@string/nav_notes"
            />

        <item
            android:id="@+id/nav_waiting"
            android:icon="@drawable/baseline_access_time_24"
            android:title="@string/nav_waiting"
            />

        <item
            android:id="@+id/nav_someday"
            android:icon="@drawable/baseline_paragliding_24"
            android:title="@string/nav_someday"
            />

        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/baseline_drive_file_rename_outline_24"
            android:title="@string/nav_projects"
            />

        <item
            android:id="@+id/nav_cur_actions"
            android:icon="@drawable/baseline_wifi_protected_setup_24"
            android:title="@string/nav_cur_actions"
            />
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/baseline_done_all_24"
            android:title="@string/nav_done"
            />

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/baseline_delete_outline_24"
            android:title="@string/nav_trash"
            />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/nav_sign_out"
            />
    </group>
</menu>