<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_intro_background"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/back_text"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_title_test_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">


                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/name"
                    android:background="@drawable/sign_up_edit_text"
                    android:drawableLeft="@drawable/baseline_person_outline_24"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"

                    android:drawablePadding="8dp"
                    android:textSize="@dimen/et_text_size"/>


                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/email"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/sign_up_edit_text"
                    android:drawableLeft="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/et_text_size"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:hint="@string/password"
                    android:background="@drawable/sign_up_edit_text"
                    android:inputType="textPassword"
                    android:drawablePadding="8dp"
                    android:textSize="16sp"/>


                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_sign_up_marginStartEnd"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_sign_up_marginStartEnd"
                    android:background="@drawable/shape_button_rounded"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/to_sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>