<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="wrap_content"
                android:layout_height="197dp"
                android:background="#ffffff"
                android:src="@drawable/im_kanban_main_act" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/get_started_text_marginTop"
                android:text="@string/get_started_test"
                android:textSize="@dimen/get_started_text_size"
                app:layout_constraintVertical_bias="0.554" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
        android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
        android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_view_layout_content_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/get_started_text_marginTop"
                android:gravity="center"
                android:text="@string/description_main_act"
                android:textColor="@color/black"
                android:textSize="@dimen/description_main_act_text_size" />

            <Button
                android:id="@+id/btn_create_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_create_note_marginStartEnd"
                android:layout_marginTop="@dimen/btn_create_note_marginTop"
                android:layout_marginEnd="@dimen/btn_create_note_marginStartEnd"
                android:background="@drawable/shape_button_rounded"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/btn_create_note"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>