<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.CreateTaskActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar_create_task_activity"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_background">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <EditText
                            android:id="@+id/create_task_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_title"
                            android:background="@drawable/sign_up_edit_text"
                            android:drawableLeft="@drawable/baseline_title_24"
                            android:inputType="textEmailAddress"
                            android:padding="15dp"
                            android:layout_marginTop="4dp"
                            android:drawablePadding="8dp"
                            android:textSize="20sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <EditText
                            android:id="@+id/create_task_entry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/sign_up_edit_text"
                            android:drawablePadding="8dp"
                            android:hint="@string/task_entry"
                            android:inputType="textMultiLine"
                            android:padding="15dp"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/create_task_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/create"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </LinearLayout>

</ScrollView>